force-app/main/default/objects/NCMT_Housing_Plan_Cost_Parameter__c/NCMT_Housing_Plan_Cost_Parameter__c.object-meta.xml
<CustomObject>
    <label>NCMT Housing Plan Cost Parameter</label>
    <nameField>
        <displayFormat>HP-Cost-{00000}</displayFormat>
        <label>NCMT Housing Plan Cost Parameter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Housing Plan Cost Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>